--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
 .App {
-  text-align: center;
-  /* background: url('./assets/images/bg2.jpg'); */
-  height: 100%;
-  min-height: calc(100vh - 4rem);
-  background-size: cover;
-  /* position: fixed; */
-  /* top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; */
-  color: wheat;
+	text-align: center;
+	/* background: url('./assets/images/bg2.jpg'); */
+	height: 100%;
+	min-height: calc(100vh - 0rem);
+	background-size: cover;
+	/* position: fixed; */
+	/* top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0; */
+	color: wheat;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .bg {
